- GregorianCalendar.getInstance() auf GregorianCalendar.getInstance(Locale.getDefault()) geändert. - Receipt.dayOfWeek neu eingefügt für Tagesumsatzstatistik, weitere entsprechende Anpassungen